<resources>
    <string name="app_name">FastFood</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fast Food</string>
    <string name="nav_header_subtitle">alexander.mosquera2.mt@correo.usa.edu.co</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_add">SQlLite</string>
    <string name="mapa">Mapa</string>


    <string name="menu_home">Home</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_sucursales">Sucursales</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- productos -->
    <string name="namep1">Beef Dog</string>
    <string name="descriptionp1">Doble carne y queso chedar</string>
    <string name="pricep1">$19.000</string>

    <string name="namep2">Hamburguer</string>
    <string name="descriptionp2">Felicidad completa</string>
    <string name="pricep2">$25.000</string>

    <string name="namep3">Pizza</string>
    <string name="descriptionp3">Peperoni exquisita</string>
    <string name="pricep3">$50.000</string>

    <string name="namep4">Papitas Fritas</string>
    <string name="descriptionp4">Inalcanzables</string>
    <string name="pricep4">$10.000</string>

    <string name="namep5">Taco Jiguales</string>
    <string name="descriptionp5">Sabor Inigualable</string>
    <string name="pricep5">$20.000</string>

    <!-- servicios -->
    <string name="names1">Drive Trhu</string>
    <string name="descriptions1">Desde la comodidad de tu vehiculo</string>
    <string name="prices1">30.000</string>

    <string name="names2">Arma tu Combo</string>
    <string name="descriptions2">Escoge tus preferidos y disfrutalos</string>
    <string name="prices2">$25.000</string>

    <string name="names3">Domicilios</string>
    <string name="descriptions3">Del horno a la puerta de tu casa</string>
    <string name="telefono">Tel: 60-2 3334455</string>

    <!-- Suscursales -->
    <string name="namesu1">Sede Sur</string>
    <string name="descriptionsu1">Glorieta Ciudad Jardin</string>
    <string name="horariosu1">Open 24 Hours</string>

    <string name="namesu2">Sede Norte</string>
    <string name="descriptionsu2">Plazoleta de Comidas CC Unico</string>
    <string name="horariosu2">Open 12:00 - 21:00 horas</string>

    <string name="namesu3">Sede Oeste</string>
    <string name="descriptionsu3">Parque del Perro</string>
    <string name="horariosu3">Open 16:00 - 23:00 horas</string>

    <string name="namesu4">Sede Este</string>
    <string name="descriptionsu4">Plazoleta de comidas CC Centenario</string>
    <string name="horariosu4">Open 12:00 - 21:00 horas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>