<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.productos.ProductosFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--    codigo producto 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgp1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/perro" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNamep1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/namep1" />

                    <TextView
                        android:id="@+id/tvDescriptionp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/descriptionp1" />

                    <TextView
                        android:id="@+id/tvPricep1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pricep1" />

                    <Button
                        android:id="@+id/btnp1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Añadir"/>

                </LinearLayout>
            </LinearLayout>

            <!--    codigo producto 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgp2"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/hamburguesa" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNamep2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/namep2" />

                    <TextView
                        android:id="@+id/tvDescriptionp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionp2" />

                    <TextView
                        android:id="@+id/tvPricep2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pricep2" />

                    <Button
                        android:id="@+id/btnp2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Añadir"/>

                </LinearLayout>
            </LinearLayout>

            <!--    codigo producto 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgp3"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/pizza" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNamep3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/namep3" />

                    <TextView
                        android:id="@+id/tvDescriptionp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionp3" />

                    <TextView
                        android:id="@+id/tvPricep3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pricep3" />

                    <Button
                        android:id="@+id/btnp3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Añadir"/>

                </LinearLayout>
            </LinearLayout>

            <!--    codigo producto 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgp4"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/papas" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNamep4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/namep4" />

                    <TextView
                        android:id="@+id/tvDescriptionp4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionp4" />

                    <TextView
                        android:id="@+id/tvPricep4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pricep4" />

                    <Button
                        android:id="@+id/btnp4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Añadir"/>

                </LinearLayout>
            </LinearLayout>

            <!--    codigo producto 5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgp5"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/tacos" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNamep5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/namep5" />

                    <TextView
                        android:id="@+id/tvDescriptionp5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionp5" />

                    <TextView
                        android:id="@+id/tvPricep5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pricep5" />

                    <Button
                        android:id="@+id/btnp5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Añadir"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>